--- a/packages/gather-generator-crf/package.json
+++ b/packages/gather-generator-crf/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ali/gather-generator-crf",
-  "version": "0.0.5",
+  "name": "wgather-generator-crf",
+  "version": "0.0.6",
   "main": "lib/index.js",
   "repository": {
     "url": "git@gitlab.alibaba-inc.com:taefed/gather.git",
@@ -39,7 +39,7 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "@ali/gather-core": "^0.0.5"
+    "wgather-core": "^0.0.2"
   },
   "devDependencies": {
     "ava": "^0.21.0",
@@ -51,8 +51,5 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0"
-  },
-  "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
   }
 }
