--- a/packages/gather-core/package.json
+++ b/packages/gather-core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ali/gather-core",
-  "version": "0.0.8",
+  "name": "wgather-core",
+  "version": "0.0.2",
   "main": "index.js",
   "repository": {
     "url": "git@gitlab.alibaba-inc.com:taefed/gather.git",
@@ -59,8 +59,5 @@
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0",
     "run-sequence": "^2.0.0"
-  },
-  "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
   }
 }
