--- a/packages/gather-pack-rollup/package.json
+++ b/packages/gather-pack-rollup/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ali/gather-pack-rollup",
-  "version": "0.0.12",
+  "name": "wgather-pack-rollup",
+  "version": "0.0.2",
   "main": "lib/index.js",
   "repository": {
     "url": "git@gitlab.alibaba-inc.com:taefed/gather.git",
@@ -39,7 +39,6 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "@ali/gather-core": "^0.0.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -65,7 +64,8 @@
     "webpack": "^3.4.1",
     "webpack-bundle-analyzer": "^2.8.3",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack-hot-middleware": "^2.18.2",
+    "wgather-core": "^0.0.2"
   },
   "devDependencies": {
     "ava": "^0.21.0",
