--- a/packages/gather/package.json
+++ b/packages/gather/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ali/gather",
-  "version": "0.0.25",
+  "name": "wgather",
+  "version": "0.0.2",
   "main": "lib/index.js",
   "bin": {
     "gather": "bin/gather.js"
@@ -42,7 +42,6 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "@ali/gather-core": "^0.0.5",
     "adm-zip": "^0.4.7",
     "boxen": "^1.2.1",
     "chalk": "^2.0.1",
@@ -57,7 +56,8 @@
     "shelljs": "^0.7.8",
     "template_js": "^0.7.1-1",
     "unzip-stream": "^0.1.2",
-    "urllib": "^2.23.0"
+    "urllib": "^2.23.0",
+    "wgather-core": "^0.0.2"
   },
   "devDependencies": {
     "ava": "^0.21.0",
@@ -76,8 +76,5 @@
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0",
     "run-sequence": "^2.0.0"
-  },
-  "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
   }
 }
