--- a/packages/gather/package.json
+++ b/packages/gather/package.json
@@ -1,9 +1,9 @@
 {
   "name": "wgather",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "main": "lib/index.js",
   "bin": {
-    "wgather": "bin/gather.js"
+    "wgather": "bin/wgather.js"
   },
   "repository": {
     "url": "git@gitlab.alibaba-inc.com:taefed/gather.git",
